# RobotTemplate

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  bmi088_debug_report.md  main.cpp
.opencode/skills/: hw-debug.md
.opencode/skills/tools/: serial_logger.py
UserSDK/: CMakeLists.txt  empty.cpp
UserSDK/algorithm/Filter/: Ekf.hpp
UserSDK/algorithm/Filter/tests/: CMakeLists.txt  EkfTest.cpp
UserSDK/algorithm/Matrix/: Matrix.hpp  Matrix.tpp
UserSDK/algorithm/Matrix/Config/: ArmMathPl.h  GeneralMathPl.h  Platform.h
UserSDK/algorithm/Matrix/tests/: CMakeLists.txt  MatrixTest.cpp
UserSDK/algorithm/Quaternion/: Quaternion.hpp  UnitQuat.hpp  UnitQuat.tpp
UserSDK/algorithm/Quaternion/tests/: CMakeLists.txt  UnitQuatTest.cpp
UserSDK/bsp/: BspConcepts.hpp  BspStatus.hpp  CMakeLists.txt
UserSDK/bsp/simulate/: USBCDC.cpp  Uart.cpp
UserSDK/bsp/stm32/: Delay.cpp  Delay.hpp  Exti.cpp  Exti.hpp  Gpio.cpp  Gpio.hpp  Spi.cpp  Spi.hpp  Timestamp.hpp  USBCDC.cpp  USBCDC.hpp  Uart.cpp  Uart.hpp
UserSDK/bsp/tests/: CMakeLists.txt  USBCDCTest.cpp  UartTest.cpp
UserSDK/component/: Count.h  Detect.h  Format.h  Logger.h  Manager.h  RingBuffer.h
UserSDK/component/tests/: CMakeLists.txt  CountTest.cpp  DetectTest.cpp  FormatTest.cpp  LoggerTest.cpp  ManagerTest.cpp  RingBufferTest.cpp
UserSDK/driver/: UsbCdcLogger.hpp
UserSDK/driver/bmi088/: Bmi088.hpp  Bmi088Reg.hpp
UserSDK/driver/bmi088/tests/: Bmi088Test.cpp  CMakeLists.txt
UserSDK/tests/: CMakeLists.txt
